# src/routers/index.js
@@ -1,10 +1,10 @@
 import { Router } from 'express';
-import contactsRouter from './contacts.js';
 import authRouter from './auth.js';
+import contactsRouter from './contacts.js';
 
 const router = Router();
 
-router.use('/contacts', contactsRouter);
 router.use('/auth', authRouter);
+router.use('/contacts', contactsRouter);
 
 export default router;
